the program now can read txt with ISO-8859-1 format