@@ -2,23 +2,35 @@ package System;
 
 import java.awt.*;
 import java.io.IOException;
+import java.nio.charset.MalformedInputException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Scanner;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+/**
+ * Class Helper
+ */
 public class Helper {
 
+    /**
+     * Constructor
+     */
     Helper() {
     }
 
+    /**
+     * Method that read all the archives .txt in the directory
+     * @param hash hash
+     * @param creator Hasher
+     */
     public final void readArchivesTxt(String hash, Hasher creator) {
         if (createDirectory()) {
             Path carpeta = Paths.get("Archives");
@@ -38,36 +50,27 @@ public class Helper {
                 }
 
                 // Crear un nuevo Stream para filtrar archivos txt y convertirlo a una lista
-                List<Path> archivos = Files.list(carpeta)
-                        .filter(archivo -> archivo.toString().endsWith(".txt"))
-                        .collect(Collectors.toList()); // Convertir a List
+                List<Path> archivos = Files.list(carpeta).filter(archivo -> archivo.toString().endsWith(".txt")).toList(); // Convertir a List
 
                 for (Path archivo : archivos) {
-                    try {
-                        System.out.println("\nReading ... -> " + archivo.getFileName());
+                    System.out.println("\nReading ... -> " + archivo.getFileName());
 
-                        // Leer todas las líneas del archivo y guardarlas en una lista
-                        List<String> lineas = Files.readAllLines(archivo, StandardCharsets.UTF_8); // Cargar líneas en un List
+                    // Intentar leer con múltiples codificaciones por si alguno no tiene el UTF-8
+                    List<String> lineas = readFileWithFallback(archivo);
 
-                        // Recorrer las líneas del archivo
-                        boolean found = false;
+                    boolean found = false;
 
-                        for (String linea : lineas) {
-
-                            if (isMatch(linea, hash, creator)) {
-                                found = true; // Se encontró una línea que no coincide
-                                break; // Rompe el ciclo para este archivo
-                            }
+                    for (String linea : lineas) {
+                        if (isMatch(linea, hash, creator)) {
+                            found = true;
+                            break;
                         }
-
-                        if (!found) {
-                            System.out.println("|*| The word has not been found :( ");
-                        }
-
-                    } catch (IOException e) {
-                        System.out.println("Error leyendo el archivo " + archivo.getFileName());
-                        e.printStackTrace();
                     }
+
+                    if (!found) {
+                        System.out.println("|*| The word has not been found :( ");
+                    }
+
                 }
 
             } catch (IOException e) {
@@ -77,6 +80,10 @@ public class Helper {
         }
     }
 
+    /**
+     * Method that save the name of the file in the directory
+     * @return a list that contains the name of the files
+     */
     public final ArrayList<String> getTxtFiles() {
 
         ArrayList<String> txtFiles = new ArrayList<>();
@@ -114,6 +121,35 @@ public class Helper {
 
     }
 
+    /**
+     * Method that identify if the txt file is using UTF-8 or ISO-8859-1
+     * @param archivo txt file
+     * @return list
+     */
+    public List<String> readFileWithFallback(Path archivo) {
+        try {
+            // Intentar leer en UTF-8
+            return Files.readAllLines(archivo, StandardCharsets.UTF_8);
+
+        } catch (MalformedInputException e) {
+            System.out.println("UTF-8 falló. Intentando con ISO-8859-1... " + archivo.getFileName());
+            try {
+                // Intentar con ISO-8859-1
+                return Files.readAllLines(archivo, StandardCharsets.ISO_8859_1);
+            } catch (IOException ex) {
+                System.out.println("Error leyendo el archivo en ambas codificaciones: " + archivo.getFileName());
+                ex.printStackTrace();
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return Collections.emptyList(); // Retorna una lista vacía si falla
+    }
+
+    /**
+     * Method that create the directory for the files
+     * @return true if the directory already exist
+     */
     public final boolean createDirectory() {
         Path carpeta = Paths.get("Archives");
 
@@ -133,6 +169,11 @@ public class Helper {
         return true;
     }
 
+    /**
+     * Method that open the directory to see the files
+     * @param carpeta the path to the directory
+     * @throws IOException exception
+     */
     public final void openDirectory(Path carpeta) throws IOException {
         // Abrir la carpeta
         if (Desktop.isDesktopSupported()) {
@@ -142,6 +183,13 @@ public class Helper {
         }
     }
 
+    /**
+     * verify if the hash searched match with any word in the txt files
+     * @param linea line from the txt
+     * @param hash hash to search
+     * @param creator hasher
+     * @return true if exist any match
+     */
     public final boolean isMatch(String linea, String hash, Hasher creator) {
 
         try {
@@ -185,6 +233,11 @@ public class Helper {
         return false;
     }
 
+    /**
+     * Method that read from console
+     * @param read scanner to read
+     * @return -1 if the input contains any letter not numeric
+     */
     public final int verifyData(Scanner read) {
         int a;
         try {
